# src/main/java/com/laosarl/allocation_ressources/domain/ResourceType.java
@@ -1,0 +1,5 @@
+package com.laosarl.allocation_ressources.domain;
+
+public enum ResourceType {
+    HARDWARE, SOFTWARE, OTHER;
+}
